--- a/reactive-application/nx.json
+++ b/reactive-application/nx.json
@@ -1,30 +1,22 @@
 {
   "implicitDependencies": {
-    "package.json": {
-      "dependencies": "*",
-      "devDependencies": "*"
-    },
+    "package.json": { "dependencies": "*", "devDependencies": "*" },
     ".eslintrc.json": "*"
   },
-  "affected": {
-    "defaultBase": "master"
-  },
+  "affected": { "defaultBase": "master" },
   "npmScope": "reactive-application",
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nrwl/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": { "cacheableOperations": ["build", "lint", "test", "e2e"] }
     }
   },
   "projects": {
-    "guitar-shop": {
-      "tags": []
-    },
-    "guitar-shop-e2e": {
-      "tags": [],
-      "implicitDependencies": ["guitar-shop"]
-    }
+    "guitar-shop": { "tags": [] },
+    "guitar-shop-e2e": { "tags": [], "implicitDependencies": ["guitar-shop"] },
+    "material": { "tags": [] },
+    "testing": { "tags": [] },
+    "api-interface": { "tags": [] },
+    "ui-toolbar": { "tags": [] }
   }
 }
