--- a/reactive-application/package.json
+++ b/reactive-application/package.json
@@ -25,19 +25,30 @@
     "update": "nx migrate latest",
     "workspace-generator": "nx workspace-generator",
     "dep-graph": "nx dep-graph",
-    "help": "nx help"
+    "help": "nx help",
+    "serve:json": "json-server server/db.json",
+    "serve:web": "ng serve",
+    "serve:all": "concurrently \"npm run serve:json\" \"npm run serve:web\""
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.0",
+    "@angular/cdk": "^11.2.12",
     "@angular/common": "^11.2.0",
     "@angular/compiler": "^11.2.0",
     "@angular/core": "^11.2.0",
     "@angular/forms": "^11.2.0",
+    "@angular/material": "^11.2.12",
     "@angular/platform-browser": "^11.2.0",
     "@angular/platform-browser-dynamic": "^11.2.0",
     "@angular/router": "^11.2.0",
+    "@ngrx/effects": "^11.1.1",
+    "@ngrx/entity": "^11.1.1",
+    "@ngrx/router-store": "^11.1.1",
+    "@ngrx/store": "^11.1.1",
     "@nrwl/angular": "12.1.1",
+    "concurrently": "^6.0.2",
+    "json-server": "^0.16.3",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "^0.10.2"
@@ -50,6 +61,7 @@
     "@angular/cli": "~11.2.0",
     "@angular/compiler-cli": "^11.2.0",
     "@angular/language-service": "^11.2.0",
+    "@ngrx/store-devtools": "^11.1.1",
     "@nrwl/cli": "12.1.1",
     "@nrwl/cypress": "12.1.1",
     "@nrwl/eslint-plugin-nx": "12.1.1",
